# ircbots

./: .gitignore  Makefile  README.md  bot.hs  bot.py  bots.cabal  hurl.hs  ircbots.cabal  launch-devroom.sh
