name:               ircbots
version:            0.1
synopsis:           foobar
description:
    IRC bots
author:             Antonin Delpeuch
cabal-version:      >= 1.6
build-type:         Simple

source-repository head
  type:     git
  location: git://github.com/wetneb/ircbots.git

executable bot
    main-is:        bot.hs
    ghc-options:    -O2 -main-is bot.hs
    build-depends:  base, containers, mtl

